# geoML

./: .gitignore  README.md  docker-compose.yml  submission (4).csv
desktop/: searcher.py
desktop/constants/: __init__.py  error_codes.py  paths.py  responses.py
desktop/data_baseline/test_data/: test.csv
desktop/processing/: text_analysis.py  text_normalization.py
nginx/: Dockerfile  nginx.conf
server/: Dockerfile  Makefile  pyproject.toml
server/app/: __main__.py
server/app/client/: index.html  script.js  style.css
server/app/config/: default.py  utils.py
server/app/desktop/: code_test.py  searcher.py
server/app/desktop/constants/: __init__.py  paths.py  responses.py
server/app/desktop/notebooks/: piter-hackaton.ipynb
server/app/desktop/processing/: text_analysis.py  text_normalization.py
server/app/endpoints/: __init__.py  search.py
server/app/templates/: index.html
