[tool.poetry]
name = "geo_ml"
version = "0.1.0"
description = "My new FastAPI project"
authors = ["ZZaRRyaDD <furnoxl@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
fastapi = "^0.79.0"
starlette = "^0.19.1"
aiohttp = "^3.8.1"
uvicorn = "^0.18.2"
python-dotenv = "^0.20.0"
python-jose = "^3.3.0"
bcrypt = "^3.2.2"
jinja2 = "^3.1.2"
isort = "^5.10.1"
pylint = "^2.14.5"
mypy = "^0.971"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# LINTERS

[tool.pylint.master]
extension-pkg-allow-list = ["pydantic"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
good-names = ["db"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "C0114",  # missing-module-docstring
  "C0116",  # missing-function-docstring
  "R0903",  # too-few-public-methods (for sqlalchemy tables and pydantic classes)
  "C0115",  # missing-class-docstring (for api routes)
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
known_local_folder = "app"
lines_after_imports = 2
multi_line_output = 3
line_length = 120
include_trailing_comma = true
